Alteração de imagem logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section id="inicio">
         <header>
-            <a href="#"><img id="logo" src="image/veggie logo trans.png" alt="Site's logo"></a>
+            <a href="#"><img id="logo" src="image/logoVegie.png" alt="Site's logo"></a>
 
             <ul id="menu">
                 <li><a href="#inicio"> Inicio </a></li>
@@ -30,7 +30,7 @@
     <footer>
         <div class="card">
             <div class="image-container">
-                <img src="image/veggie logo trans.png" alt="Cardlogo" style="width:20%">
+                <img src="image/logoVegie.png" alt="Cardlogo" style="width:20%">
             </div>
             <div class="container">
                 <h4><b>*Vegan brand*</b></h4>
