--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veggie's Page</title>
     <link rel="stylesheet" href="style.css">
+    <script src="js/slideshow.js" defer></script>
 </head>
 
 <body>
@@ -22,14 +23,16 @@
     </header>
 
     <section id="inicio">
-        <h1></h1>
+        <img class="slideVeggie" src="image/slide1.jpg" alt="Slide 1 - Imagem com uma variedade de alimentos">
+        <img class="slideVeggie" src="image/slide2.jpg" alt="Slide 2 - Imagem da parte interior de um estabelecimento">
+        <img class="slideVeggie" src="image/slide3.jpg" alt="Slide 3 - Imagem que faz uma apresentação de um prato">
+        <img class="slideVeggie" src="image/slide4.jpg" alt="Slide 4 - Imagem de um estabelecimento sendo visitado por clientes">
+        <img class="slideVeggie" src="image/slide5.jpg" alt="Slide 5 - Imagem da apresentação de um pra com variedade de alimentos">
     </section>
 
     <section id="sobrenos">
-        <h1> Sobre Nós </h1>
-        <div class="sobrenos_p">
+        <h2> Sobre Nós </h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing. </p>
-        </div>
     </section>
 
     <section id="produtos">
@@ -40,7 +43,7 @@
         <h1> Receitas </h1>
         <div id="card_receita">
             <div class="card_receita_image">
-                <img src="image/cake.png" alt="Receita 1" style="width: 100%">
+                <img src="image/cake.png" alt="Receita 1">
                 <div class="card_receita_text">
                     <h4> Bolo Veggie </h4>
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing. </p>
@@ -48,7 +51,7 @@
             </div>
 
             <div class="card_receita_image">
-                <img src="image/burger.png" alt="Receita 2" style="width: 100%">
+                <img src="image/burger.png" alt="Receita 2">
                 <div class="card_receita_text">
                     <h4> Burger Veggie </h4>
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing. </p>
@@ -56,7 +59,7 @@
             </div>
 
             <div class="card_receita_image">
-                <img src="image/massa.png" alt="Receita 3" style="width: 90%">
+                <img src="image/massa.png" alt="Receita 3">
                 <div class="card_receita_text">
                     <h4> Massa Veggie </h4>
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing. </p>
